# FTP-Server

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: config.h  console.c  console.h  file.c  file.h  ftp.c  ftp.h  ftp_commands.c  ftp_commands.h  globals.h  main.c  network.c  network.h  typedef.h  utils.c  utils.h
